Upgrading to OpenJDK 17 (#209)