@@ -8,6 +8,9 @@
         <artifactId>eiffel-remrem-generate</artifactId>
         <version>${eiffel-remrem-generate.version}</version>
     </parent>
+    <properties>
+        <start-class>com.ericsson.eiffel.remrem.generate</start-class>
+    </properties>
     <artifactId>generate-service</artifactId>
     <packaging>war</packaging>
     <dependencies>
@@ -48,11 +51,21 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>${mockito.version}</version>
+       </dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-ldap</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.jayway.restassured</groupId>
+            <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
         </dependency>
         <dependency>
@@ -91,16 +104,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
         </dependency>
+        <dependency>
+           <groupId>javax.servlet</groupId>
+           <artifactId>javax.servlet-api</artifactId>
+           <version>3.0.1</version>
+           <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
 		    <plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${springboot.version}</version>
+				<version>${springboot.version}</version>
 		        <configuration>    
                     <mainClass>com.ericsson.eiffel.remrem.generate.App</mainClass>
-                    <fork>true</fork>
                     <skip>false</skip>
                 </configuration>
                 <executions>
@@ -114,6 +132,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version>
                 <configuration>
                     <archive>
                         <manifestEntries>
@@ -131,6 +150,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
+                <configuration>
+                    <!-- Allow JUnit to access the test classes -->
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/jdk.internal.reflect=ALL-UNNAMED</argLine>
+
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
